k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gs-inv-ingress
spec:
  rules:
    - host: gs-inv-dev.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gs-inv-service
                port:
                  number: 80
